--- a/pong-frontend/src/app/game/game.component.css
+++ b/pong-frontend/src/app/game/game.component.css
@@ -1,28 +1,68 @@
+/* #game-container-parent { */
+/*   /* width: auto; */ */
+/*   max-width: 1340px; */
+/*   max-height: 839px; */
+
+/*   /* position: absolute; */ */
+/*   top: 50%; */
+/*   left: 50%; */
+/*   /* top: calc(50% - 839px/2 + 25.5px); */ */
+
+/*   /* align-items: center; */ */
+/*   background: #103959; */
+/*   border-radius: 40px; */
+/*   padding-top: 121px; */
+/*   padding-bottom: 33px; */
+/*   /* padding-left: auto; */ */
+/*   /* padding-right: auto; */ */
+/*   /* padding-right: ; */ */
+/* } */
+
+/* #game-container { */
+/*   max-width: 1232px; */
+/*   max-height: 685px; */
+/*   /* margin-top: 121px; */ */
+/*   /* margin-bottom: 33px; */ */
+/*   margin-left: 54px; */
+/*   margin-right: 54px; */
+/* } */
+
+/* #game-container-parent { */
+/*   max-width: 1340px; */
+/*   max-height: 839px; */
+/*   display: flex; */
+/*   justify-content: center; */
+/*   align-items: center; */
+/*   background: #103959; */
+/*   border-radius: 40px; */
+/*   padding-top: 121px; */
+/*   padding-bottom: 33px; */
+/*   /* padding: 50px; */ */
+/* } */
+
+/* #game-container { */
+/*   width: 100%; */
+/*   max-width: 1232px; */
+/*   max-height: 685px; */
+/*   margin: 0 54px; */
+/* } */
+
+
 #game-container-parent {
-  /* width: auto; */
   max-width: 1340px;
   max-height: 839px;
-
-  /* position: absolute; */
-  top: 50%;
-  left: 50%;
-  /* top: calc(50% - 839px/2 + 25.5px); */
-
-  /* align-items: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: #103959;
   border-radius: 40px;
-  padding-top: 121px;
-  padding-bottom: 33px;
-  /* padding-left: auto; */
-  /* padding-right: auto; */
-  /* padding-right: ; */
+  padding: 50px;
+  box-sizing: border-box;
 }
 
 #game-container {
+  width: 100%;
   max-width: 1232px;
   max-height: 685px;
-  /* margin-top: 121px; */
-  /* margin-bottom: 33px; */
-  margin-left: 54px;
-  margin-right: 54px;
+  margin: auto;
 }
