trying to isolate theGameComponent

--- a/pong-frontend/src/app/game/game.component.html
+++ b/pong-frontend/src/app/game/game.component.html
@@ -7,4 +7,4 @@
   <div id="game-container"></div>
 </div>
 
-<pre>{{ gameState | async | json }}</pre>
+<!-- <pre>{{ gameState$ | async | json }}</pre> -->
