trying to emulate invite system

--- a/pong-frontend/src/app/login/login.component.html
+++ b/pong-frontend/src/app/login/login.component.html
@@ -1,19 +1,25 @@
-<div *ngIf="!user ; else logged">
+<div *ngIf="!user; else logged">
   <p>login</p>
   <input [(ngModel)]="username_login" />
-  <button (click)='logIn()'>log</button>
+  <button (click)="logIn()">log</button>
 
   <p>create user</p>
   <input [(ngModel)]="username_create" />
-  <button (click)='createUser()'>create</button>
+  <button (click)="createUser()">create</button>
 </div>
 
 <ng-template #logged>
-  <h1>Hello {{user.username}}</h1>
-  <ul *ngFor="let user of (users$ | async)">
-    <li>{{user | json}}</li>
-    <ul *ngFor="let match of user.matches">
+  <h1>Hello {{ user.username }}</h1>
+  <ul *ngFor="let u of users$ | async">
+    <li>{{u | json}} <button (click)="createGameWith(u.id)">VS</button> </li>
+    <ul *ngFor="let match of u.matches">
       <li>{{match | json}}</li>
     </ul>
   </ul>
+
+  <div>
+    {{onlineUsers$ | async | json}}
+  </div>
+
+  <button (click)="createRandomGame()">Play Random Game</button>
 </ng-template>
