--- a/pong-frontend/src/app/login/login.component.html
+++ b/pong-frontend/src/app/login/login.component.html
@@ -11,18 +11,19 @@
 
   <ng-template #logged>
     <h1>Hello {{ user.username }}</h1>
-    <ul *ngFor="let u of users$ | async">
-      <li>{{u | json}} <button [disabled]="u.id === user.id" (click)="createGameWith(u.id)">VS</button>
-      </li>
-      <ul *ngFor="let match of u.matches">
-        <li>{{match | json}}</li>
-      </ul>
+    <h2>Online Player :</h2>
+    <ul *ngFor="let u of filteredUsers$ | async">
+      <li>{{u | json}} <button (click)="createGameWith(u.id)">VS</button></li>
     </ul>
 
-    <div>
-      {{onlineUsers$ | async | json}}
-    </div>
-
+    <h2>Match History :</h2>
+    <ul *ngFor="let match of user.matches">
+      <li>
+        <div>Match ID: {{ match.id }}</div>
+        <div>Winner: {{ match.winner }}</div>
+        <div>Date: {{ match.date | date }}</div>
+      </li>
+    </ul>
     <button (click)="createRandomGame()">Play Random Game</button>
   </ng-template>
 </div>
