--- a/pong-frontend/src/app/login/login.component.html
+++ b/pong-frontend/src/app/login/login.component.html
@@ -13,15 +13,17 @@
     <h1>Hello {{ user.username }}</h1>
     <h2>Online Player :</h2>
     <ul *ngFor="let u of filteredUsers$ | async">
-      <li>{{u | json}} <button (click)="createGameWith(u.id)">VS</button></li>
+      <li>{{u.id}} : {{u.username}} <button (click)="createGameWith(u.id)">VS</button></li>
     </ul>
 
     <h2>Match History :</h2>
     <ul *ngFor="let match of user.matches">
       <li>
-        <div>Match ID: {{ match.id }}</div>
-        <div>Winner: {{ match.winner }}</div>
-        <div>Date: {{ match.date | date }}</div>
+        <!-- <div>Match ID: {{ match.id }}</div> -->
+        <div>Payer1: {{ match.player1Id }}</div>
+        <div>Payer2: {{ match.player2Id }}</div>
+        <div>Winner: {{ match.winnerId }}</div>
+        <div>Date: {{ match.date | date:'fullDate' }}</div>
       </li>
     </ul>
     <button (click)="createRandomGame()">Play Random Game</button>
